# Core

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  package.xml
launch/: core.launch  web.launch
scripts/: web_control.py
src/: router.cpp  web_control.py
src/router/: default_route.lua  main.cpp  setup.lua  subpub.h
srv/: GetCurrentRoute.srv  GetRouteList.srv  SaveRoute.srv  SetTemporaryRoute.srv
web/: next.config.js  package.json
web/client-only/: ros.js
web/components/: estop-control.js  estop-state.js  gps-heading-display.js  gps-ned-display.js  gps-position-display.js  route-select.js  topic-display-video.js  topic-display.js
web/pages/: index.js
